--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,8 @@ file.reference.flatlaf-3.3.jar=src\\xternaljar\\flatlaf-3.3.jar
 file.reference.flatlaf-3.4.1.jar=src\\xternaljar\\flatlaf-3.4.1.jar
 file.reference.itextpdf-5.5.9.jar=src\\xternaljar\\itextpdf-5.5.9.jar
 file.reference.jcalendar-1.4.jar=src\\xternaljar\\jcalendar-1.4.jar
+file.reference.jcommon-1.0.23.jar=src\\xternaljar\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=src\\xternaljar\\jfreechart-1.0.19.jar
 file.reference.junit-4.12.jar=src\\xternaljar\\junit-4.12.jar
 file.reference.log4j-1.2.17.jar=src\\xternaljar\\log4j-1.2.17.jar
 file.reference.poi-3.17.jar=src\\xternaljar\\poi-3.17.jar
@@ -69,7 +71,9 @@ javac.classpath=\
     ${file.reference.poi-ooxml-schemas-3.17.jar}:\
     ${file.reference.poi-scratchpad-3.17.jar}:\
     ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
